--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -27,7 +27,7 @@ requirements:
     - numpy >=1.9
     - pandas
     - python >=3.7
-    - scipy >=0.16
+    - scipy >=0.16,<1.10
     - seaborn
     - pytorch >=1.11.0
     - tqdm
