--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -28,7 +28,7 @@ requirements:
     - numpy >=1.9
     - pandas
     - python >=3.7
-    - scipy >=0.16,<1.10
+    - scipy >=0.16
     - seaborn
     - pytorch >=1.11.0
     - tqdm
