--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -11,14 +11,14 @@ source:
   sha256: 5c59401b3e884049d0fa72f8f415442930bd1cc3647ddbf1340d49a5b0947ca3
 
 build:
-  number: 0
+  number: 1
   noarch: python
   script: {{ PYTHON }} -m pip install . -vv
 
 requirements:
   host:
     - pip
-    - python >=3.7,<3.12
+    - python >=3.7
     - setuptools
     - setuptools-scm
   run:
