--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -27,7 +27,7 @@ requirements:
     - matplotlib-base >=2.0
     - numpy >=1.9
     - pandas
-    - python >=3.7,<3.12
+    - python >=3.7
     - scipy >=0.16
     - seaborn
     - pytorch >=1.11.0
