--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -32,7 +32,7 @@ requirements:
     - seaborn
     - pytorch >=1.11.0
     - tqdm
-    - importlib-metadata  # [py<310]
+    - importlib-metadata
 
 test:
   requires:
